--- a/patch 1.1/html/faculty-dashboard.html
+++ b/patch 1.1/html/faculty-dashboard.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="../misc/fonts.css">
 </head>
 <body>
-    <input type="checkbox" id="menuToggle" class="menu-toggle">
     <header>
         <div class="header-left">
             <a href="../html/faculty-dashboard.html">
@@ -18,14 +17,14 @@
             <span class="logo-name">ActTrack</span></a>
         </div>
         <div class="header-right">
-            <img width="30" height="30" src="https://img.icons8.com/ios/50/plus--v1.png" alt="plus--v1"/>
-            <img src="../static/tristan.png" width="25" height="25" alt="pfp">
+            <i class="fa-solid fa-plus" style="font-size: 25px;"></i>
+            <img src="../static/tristan.png" width="50" height="50" alt="pfp">
         </div>
     </header>
 
     <aside class="navbar open">
         <div class="navbar-group">
-            <a href="#" class="link active">
+            <a href="../html/faculty-dashboard.html" class="link active">
                 <i class="fa-solid fa-house"></i>
                 <span class="link-name">Home</span>
             </a>
@@ -40,16 +39,20 @@
                 <span class="link-name toggle">Teaching</span>
             </a>
             <div id="toggle-group">
-                <a href="#" class="link visible">
+                <a href="../html/faculty-resources.html" class="link visible">
+                    <i class="fa-solid fa-book"></i>
+                    <span class="link-name">Resources</span>
+                </a>
+                <a href="../html/faculty-submissions.html" class="link visible">
                     <i class="fa-solid fa-folder"></i>
                     <span class="link-name">Submissions</span>
                 </a>
-                <a href="#" class="link visible">
+                <a href="../html/webdev.html" class="link visible">
                     <!--<img width="24" height="24" src="#" alt="home"/>-->
                     <i class="fa-solid fa-circle"></i>
                     <div class="class-info">
-                        <span class="link-name">Class 1</span>
-                        <span class="link-class">Section</span>
+                        <span class="link-name">Web Design Development</span>
+                        <span class="link-class">BSAIS 2-1</span>
                     </div>
                 </a>
             </div>
@@ -70,40 +73,43 @@
         <div class="subject-container">
             <a href="../html/webdev.html">
                 <div class="subject-card">
-                    <span class="subject-title">Web Design Development</span>
-                    <span class="subid">IS221</span>
-                    <span class="professor">Ricafort, Sheryl Ann B.</span>
-                    <br>
+                    <div class="subject-meta">
+                        <span class="subject-title">Web Design Development</span>
+                        <span class="subid">IS221</span>
+                        <span class="professor">Ricafort, Sheryl Ann B.</span>
+                    </div>
                     <div class="class-meta">
-                        <i class="fa-solid fa-arrow-trend-up"></i>
-                        <i class="fa-regular fa-folder"></i>
-                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                        <a href="" class="record"><i class="fa-solid fa-arrow-trend-up "></i></a>
+                        <a href="" class="folder"><i class="fa-regular fa-folder "></i></a>
+                        <a href="" class="settings"><i class="fa-solid fa-ellipsis-vertical "></i></a>
                     </div>
                 </div>
             </a>
             <a href="#">
                 <div class="subject-card">
-                    <span class="subject-title">Web Design Development</span>
-                    <span class="subid">IS221</span>
-                    <span class="professor">Ricafort, Sheryl Ann B.</span>
-                    <br>
+                    <div class="subject-meta">
+                        <span class="subject-title">Advance Airline Ticketing</span>
+                        <span class="subid">IS221</span>
+                        <span class="professor">Ricafort, Sheryl Ann B.</span>
+                    </div>
                     <div class="class-meta">
-                        <i class="fa-solid fa-arrow-trend-up"></i>
-                        <i class="fa-regular fa-folder"></i>
-                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                        <a href="" class="record"><i class="fa-solid fa-arrow-trend-up "></i></a>
+                        <a href="" class="folder"><i class="fa-regular fa-folder "></i></a>
+                        <a href="" class="settings"><i class="fa-solid fa-ellipsis-vertical "></i></a>
                     </div>
                 </div>
             </a>
             <a href="#">
                 <div class="subject-card">
-                    <span class="subject-title">Web Design Development</span>
-                    <span class="subid">IS221</span>
-                    <span class="professor">Ricafort, Sheryl Ann B.</span>
-                    <br>
+                    <div class="subject-meta">
+                        <span class="subject-title">Web Design Development</span>
+                        <span class="subid">IS221</span>
+                        <span class="professor">Ricafort, Sheryl Ann B.</span>
+                    </div>
                     <div class="class-meta">
-                        <i class="fa-solid fa-arrow-trend-up"></i>
-                        <i class="fa-regular fa-folder"></i>
-                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                        <a href="" class="record"><i class="fa-solid fa-arrow-trend-up "></i></a>
+                        <a href="" class="folder"><i class="fa-regular fa-folder "></i></a>
+                        <a href="" class="settings"><i class="fa-solid fa-ellipsis-vertical "></i></a>
                     </div>
                 </div>
             </a>
