--- a/patch 1.1/html/faculty-dashboard.html
+++ b/patch 1.1/html/faculty-dashboard.html
@@ -72,11 +72,27 @@
     <main>
         <div class="subject-container">
             <a href="../html/webdev.html">
-                <div class="subject-card">
-                    <div class="subject-meta">
-                        <span class="subject-title">Web Design Development</span>
-                        <span class="subid">IS221</span>
-                        <span class="professor">Ricafort, Sheryl Ann B.</span>
+                <div class="sub-img">
+                    <div class="subject-card">
+                        <div class="subject-meta">
+                            <span class="subject-title">Web Design Development</span>
+                            <span class="subid">IS221</span>
+                            <span class="professor">Ricafort, Sheryl Ann B.</span>
+                        </div>
+                        </a>
+                    </div>
+                    <div class="act-meta">
+                        <span class="act-dl">due Monday:</span>
+                        <span class="act-list">
+                            <div class="act-title">
+                                <ul>
+                                    <li>
+                                        <a href="../html/activity1-webdev.html">1:00 pm - Final project presentation</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <a href="../html/webdev-classwork.html">view all</a>
+                        </span>
                     </div>
                     <div class="class-meta">
                         <a href="" class="record"><i class="fa-solid fa-arrow-trend-up "></i></a>
@@ -84,13 +100,29 @@
                         <a href="" class="settings"><i class="fa-solid fa-ellipsis-vertical "></i></a>
                     </div>
                 </div>
-            </a>
+
             <a href="#">
-                <div class="subject-card">
-                    <div class="subject-meta">
-                        <span class="subject-title">Advance Airline Ticketing</span>
-                        <span class="subid">IS221</span>
-                        <span class="professor">Ricafort, Sheryl Ann B.</span>
+                <div class="sub-img">
+                    <div class="subject-card">
+                        <div class="subject-meta">
+                            <span class="subject-title">Advance Airline Ticketing</span>
+                            <span class="subid">AIS223</span>
+                            <span class="professor">Caguia, Cielito Mercado</span>
+                        </div>
+                    </div>
+                </a>
+                    <div class="act-meta">
+                        <span class="act-dl">due June 14:</span>
+                        <span class="act-list">
+                            <div class="act-title">
+                                <ul>
+                                    <li>
+                                        <a href="../html/activity1.html">5:00 pm - Submission of exam</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <a href="../html/webdev-classwork.html">view all</a>
+                        </span>
                     </div>
                     <div class="class-meta">
                         <a href="" class="record"><i class="fa-solid fa-arrow-trend-up "></i></a>
@@ -98,23 +130,38 @@
                         <a href="" class="settings"><i class="fa-solid fa-ellipsis-vertical "></i></a>
                     </div>
                 </div>
-            </a>
             <a href="#">
-                <div class="subject-card">
-                    <div class="subject-meta">
-                        <span class="subject-title">Web Design Development</span>
-                        <span class="subid">IS221</span>
-                        <span class="professor">Ricafort, Sheryl Ann B.</span>
+                <div class="sub-img">
+                    <div class="subject-card">
+                        <div class="subject-meta">
+                            <span class="subject-title">System Analysis and Design</span>
+                            <span class="subid">IS222</span>
+                            <span class="professor">Dasalla, Jerum Basanes</span>
+                        </div>
                     </div>
+                </a>
+                <div class="act-meta">
+                    <div class="act-dl">due June 21:</div>
+                    <span class="act-list">
+                        <div class="act-title">
+                            <ul>
+                                <li>
+                                    <a href="../html/activity1-saad.html">5:00 pm - Final project</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <a href="../html/webdev-classwork.html">view all</a>
+                    </span>
+                </div>
                     <div class="class-meta">
                         <a href="" class="record"><i class="fa-solid fa-arrow-trend-up "></i></a>
                         <a href="" class="folder"><i class="fa-regular fa-folder "></i></a>
                         <a href="" class="settings"><i class="fa-solid fa-ellipsis-vertical "></i></a>
                     </div>
                 </div>
-            </a>
         </div>
     </main>
+    <script src="../js/deliverables.js"></script>
     <script src="../js/navbar.js"></script>
 </body>
 </html>
