--- a/patch 1.1/html/webdev-grades.html
+++ b/patch 1.1/html/webdev-grades.html
@@ -75,6 +75,7 @@
             <a href="../html/webdev-classwork.html" class="link">Classwork</a>
             <a href="../html/webdev-people.html" class="link">People</a>
             <a href="../html/webdev-grades.html" class="link active-1">Grades</a>
+            <a href="../html/faculty-attendance.html" class="link">Attendance</a>
         </nav>
 
     </main>
